Added support for Localization in Eam Industry for Reference

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=fcgcBjW8pRjCEGq+/OYRhFIYma+qWGFRZK4Dyl6F0Ws=
 jwt.expirationMs=3600000
 
-audit.enabled=true
-audit.level=INFO
-audit.logger-name=AUDIT
-audit.redacted-fields=password,ssn,creditCard
-audit.file-path: logs/audit-dev.log
+# I18N Configuration
+i18n.enabled=true
+i18n.default-locale=en
+i18n.fallback-locale=en
