Added support for PostgresSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,8 @@ spring.application.name=eam
 logger.level.root=INFO
 
 logging.level.org.springframework.security=DEBUG
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Enable H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+# JWT Configuration
 jwt.secret=fcgcBjW8pRjCEGq+/OYRhFIYma+qWGFRZK4Dyl6F0Ws=
 jwt.expirationMs=3600000
 
@@ -22,3 +11,7 @@ jwt.expirationMs=3600000
 i18n.enabled=true
 i18n.default-locale=en
 i18n.fallback-locale=en
+
+# JPA Configuration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
